--- a/index.html
+++ b/index.html
@@ -1,31 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Meet landing page</title>
-</head>
-<body>
-  Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;900&display=swap"
+      rel="stylesheet" />
+    <title>Frontend Mentor | Meet landing page</title>
+  </head>
+  <body>
+    <header class="header container">
+      <div class="header__logo">
+        <img src="images/logo.svg" alt="Meet logo" />
+      </div>
 
-  Download v1.3
-  What is it?
+      <div class="hero">
+        <div class="hero__img">
+          <img src="images/tablet/image-hero.png" alt="" aria-hidden="true" />
+        </div>
+        <div class="hero__description">
+          <h1>Group Chat for Everyone</h1>
+          <p class="lead">
+            Meet makes it easy to connect with others face-to-face virtually and collaborate across
+            any device.
+          </p>
+          <div class="hero__description__buttons">
+            <a href="#" class="btn btn-primary">Download <span class="text-primary">v1.3</span></a>
+            <a href="#" class="btn btn-secondary">What is it?</a>
+          </div>
+        </div>
+      </div>
+    </header>
 
-  01
-  Built for modern use
+    <main class="container">
+      <div class="number number-1">
+        <p>01</p>
+      </div>
 
-  Smarter meetings, all in one place
+      <section class="container section-1">
+        <div class="gallery">
+          <div class="gallery__img">
+            <img src="images/desktop/image-woman-in-videocall.jpg" alt="Woman in videocall" />
+          </div>
+          <div class="gallery__img">
+            <img src="images/desktop/image-women-videochatting.jpg" alt="Women in videochatting" />
+          </div>
+          <div class="gallery__img">
+            <img src="images/desktop/image-men-in-meeting.jpg" alt="Men in meeting" />
+          </div>
+          <div class="gallery__img">
+            <img src="images/desktop/image-man-texting.jpg" alt="Men texting" />
+          </div>
+        </div>
 
-  Send messages, share files, show your screen, and record your meetings — all in one 
-  workspace. Control who can join with invite-only team access, data encryption, and data export.
+        <div class="section-1__description">
+          <p class="overline">Built for modern use</p>
+          <h2>Smarter meetings, all in one place</h2>
+          <p class="lead">
+            Send messages, share files, show your screen, and record your meetings — all in one
+            workspace. Control who can join with invite-only team access, data encryption, and data
+            export.
+          </p>
+        </div>
+      </section>
 
-  02
-  Experience more together
-  Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
+      <div class="number number-2">
+        <p>02</p>
+      </div>
+    </main>
 
-  Download v1.3
-</body>
+    <footer class="footer container">
+      <div class="footer__content">
+        <h2>Experience more together</h2>
+        <p class="lead">
+          Stay connected with reliable HD meetings and unlimited one-on-one and group video
+          sessions.
+        </p>
+        <a href="#" class="btn btn-secondary">Download <span class="text-secondary">v1.3</span></a>
+      </div>
+    </footer>
+  </body>
 </html>
